diesel_compile_tests/tests/fail/as_expression_bad_sql_type.stderr
error: `sql_type` is either unexpected or has bad format
 --> $DIR/as_expression_bad_sql_type.rs:5:10
  |
5 | #[diesel(sql_type)]
  |          ^^^^^^^^

error: `sql_type` is either unexpected or has bad format
 --> $DIR/as_expression_bad_sql_type.rs:9:10
  |
9 | #[diesel(sql_type(Foo))]
  |          ^^^^^^^^

error: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> $DIR/as_expression_bad_sql_type.rs:13:21
   |
13 | #[diesel(sql_type = "@%&&*")]
   |                     ^^^^^^^

error: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> $DIR/as_expression_bad_sql_type.rs:17:21
   |
17 | #[diesel(sql_type = 1omg)]
   |                     ^^^^
